keycloak/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak-test
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443    
  selector:
    app: keycloak
    type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak-test
  labels:
    app: keycloak
spec: 
  replicas: 1 # <- only one instance is functional, more instances will cause problems
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:21.1.1
          volumeMounts:
            - name: tls
              mountPath: /etc/x509/https
              readOnly: true
          args:
            [
              "start",
              # "--optimized",
              # "--hostname-url=https://keycloak.navida.dev",
              "--hostname-url=https://r1.navida.dev/keycloak/p1/p2/p3",
              "--http-relative-path=/keycloak/p1/p2/p3",
              "--db postgres",
              "--db-url=jdbc:postgresql://postgresql.navida.dev:5432/keycloak?sslmode=disable"
            ]
          ports:
            - name: https
              containerPort: 8443
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /keycloak/p1/p2/p3/realms/master
              port: 8080
            initialDelaySeconds: 300
            periodSeconds: 10
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
      volumes:
        - name: tls
          secret:
            secretName: keycloak-navida-dev
            optional: false
