keycloak/haproxy-keycloak.azure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: keycloak
  namespace: theitcrowd
spec:
  rules:
  - host: haproxy.navida.dev
    http:
      paths:
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
        path: /keycloak
        pathType: Prefix
  tls:
  - hosts:
    - haproxy.navida.dev
    secretName: navida.dev
