keycloak/traefik-keycloak.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: remove-keycloak-path
#   namespace: keycloak-test
# spec:
#   replacePathRegex:
#     regex: "^/keycloak/(.*)"
#     replacement: "${1}"
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: add-keycloak-path
#   namespace: keycloak-test
# spec:
#   replacePathRegex:
#     regex: "^/admin/(.*)"
#     replacement: "/keycloak/admin/${1}"
# ---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-ingressroute
  namespace: keycloak-test
spec:
  entryPoints:
  - websecure
  tls:
    certResolver: default
  routes:
  # - match: Host(`keycloak.navida.dev`)
  - match: Host(`r1.navida.dev`) && PathPrefix(`/keycloak`)  
    kind: Rule
    services:
    - name: keycloak
      port: 8080
      namespace: keycloak-test
